# PyAPI

./: .gitignore  README.md  makefile  pyproject.toml  requirements.txt  setup.py
PyAPI/: __init__.py
PyAPI/api/: server.py
PyAPI/brokers/: redis.py
PyAPI/worker/: worker.py
src/pyapi/api/: server.py
src/pyapi/brokers/: redis.py
src/pyapi/common/: consts.py  generic_models.py
src/pyapi/worker/: worker.py
